tests/syntax_error/bad_argument_name.jou
def f(5) -> void:  # Error: expected an argument name, got an integer
    return
